# Carbon-DeCoder

./: .env.example  .gitattributes  .gitignore  LICENCES.md  Makefile  README.md  docker-compose.remote.yml  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py  pipeline_contract.py  pipeline_process.py  version.py  worker_queue.py
apps/api/tests/: test_alignment_coverage_import.py  test_alignment_parser.py  test_auto_ingest_hook.py  test_batch_ingest_contract_poster.py  test_benchmark_history.py  test_benchmark_parser.py  test_browser_cdp_smoke_script.py  test_caller_agreement.py  test_clinvar_pipeline.py  test_coverage_empty_states.py  test_coverage_parser.py  test_coverage_tiles_parser.py  test_dark_matter_report.py  test_data_ingest.py  test_delete_persistence.py  test_fastq_to_fasta_assembly_script.py  test_foundation_contract.py  test_generic_ingest_contract_poster.py  test_input_validator_v2.py  test_interpretation_foundation.py  test_interpretation_modules.py  test_live_sam_parser.py  test_local_pipeline_live_gate.py  test_local_pipeline_smoke_script.py  test_mtdna_prs_endpoints.py  test_mtdna_prs_parsers.py  test_mtdna_prs_taxonomy_import.py  test_nextflow_alignment_coverage_scripts.py  test_persistence_recovery.py  test_pgs_curated_manifest.py  test_pipeline_job_contract.py  test_pipeline_process.py  test_project_inventory.py  test_provenance_and_reports.py  test_qc_parser.py  test_real_wgs_validation_gate.py  test_reference_actions.py  test_reference_compatibility.py  (+22 more)
(+139 files in other folders)
