[project]
name = "wgs-cockpit-api"
version = "0.8.7"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "alembic",
  "psycopg2-binary",
  "greenlet",
  "pyarrow>=16.1,<18",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
